web/src/components/Common/BlogPost/BlogPost.module.scss
@import 'setting';

.Root {
  position: relative;

  ul {
    list-style-position: inside;
    list-style: none;
    font-size: spacing(2.25);
    line-height: spacing(3);

    @include mq($breakpoint-tablet) {
      font-size: spacing(2.5);
      line-height: spacing(3.5);
    }

    @include mq($breakpoint-desktop) {
      font-size: spacing(3.2);
      line-height: spacing(4.2);
    }
    li {
      &:before {
        content: '';
        background-color: $color-primary-purple;
        height: spacing(1);
        border-radius: 50%;
        vertical-align: middle;
        font-weight: bold;
        display: inline-block;
        width: spacing(1);
        margin-right: spacing(1);
      }
    }
  }
}

.Container {
  position: relative;
  background-color: $color-primary-white;
  top: 0;
  padding: spacing(1) spacing(2) spacing(6);

  @include mq($breakpoint-desktop) {
    padding: spacing(3) spacing(5) spacing(6);
  }
}

.TitleWrapper {
  position: relative;
  margin-bottom: spacing(3);
  margin-top: spacing(3);
  padding: spacing(3) 0 spacing(3);
  margin-left: 2.5rem;
  &::before {
    content: '';
    display: block;
    position: absolute;
    background-image: url('/asset/overlay2.svg');
    width: spacing(3.5);
    height: 100%;
    top: 0rem;
    left: -2.5rem;
  }

  @include mq($breakpoint-tablet) {
    padding: spacing(3) spacing(1) spacing(3);
  }
}


.HighlightedText {
  margin-bottom: spacing(3);
  p {
    color: $color-primary-purple;

    font-size: spacing(2.7);
    line-height: spacing(2.8);

    @include mq($breakpoint-mobile-large) {
      font-size: spacing(3);
      line-height: spacing(4);
    }

    @include mq($breakpoint-tablet) {
      font-size: spacing(3.5);
      line-height: spacing(4.5);
    }

    @include mq($breakpoint-desktop) {
      font-size: spacing(4);
    }
  }
}

.DateWrapper {
  font-weight: 500;
  display: inline-block;
  // background-color: $color-primary-purple;
  color: $color-primary-black-light;
  // font-weight: 500;
  // padding: spacing(0.5) spacing(1);
  // border-radius: $radius-small;
  text-align: right;
  line-height: 0;
  margin-bottom: spacing(1);
}

.CategoryWrapper {
  display: flex;
  align-content: center;
  & > div {
    margin-right: spacing(1);
  }
}


@include mq($breakpoint-tablet) {
  .Container {
    padding: spacing(3) spacing(15) spacing(6);
  }
  .TitleWrapper {
    &::before {
      //   left: 0.5rem;
    }
  }
}

@include mq($breakpoint-tabletLandscape) {
  .Container {
    top: spacing(-10);
  }
}

.isDark {
  .Container {
    color: $color-primary-white;
    background-color: $color-primary-black-light;
  }

  .DateWrapper {
    // color: $color-primary-yellow;
  }

  .HighlightedText p {
    color: $color-primary-yellow;
  }

  .Content a {
    color: $color-primary-yellow;
    &:hover {
      color: $color-primary-red;
    }
  }

  .TitleWrapper {
    &::before {
      background-image: url('/asset/overlay2white.svg');
    }
  }
}

